# ypprpo_lab_1

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: BigArray.h
src/: BigArray  BigArray.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
